# Gabby

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: join.rs  leave.rs  link.rs  mod.rs  sound.rs  user.rs
src/tts/: google_tts.rs  mod.rs  models.rs
