[package]
name = "gabby"
version = "0.1.0"
authors = ["Antwan van Houdt <a.vanhoudt@wearetriple.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
base64-stream = "1.2.4"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0.116"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.tokio]
version = "0.2"
features = ["full"]
